--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "@reduxjs/toolkit": "^1.9.6",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
-    "react-router-dom": "^6.16.0"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
